test/spec_vectors/local_get/fail/module_2.wat
(module (func $type-local-num-vs-num (result i32) (local f32) (i32.eqz (local.get 0))))